--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,6 +2,7 @@
 <Project>
 
     <PropertyGroup Condition="'$(MSBuildProjectExtension)' == '.csproj'">
+        <!-- Build configurations -->
         <Configurations>Debug;Release;Stable;Preview;Store</Configurations>
         <Platforms>x86;x64;arm64</Platforms>
         <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
@@ -10,6 +11,13 @@
         <DefineConstants Condition="'$(Configuration)' == 'Debug'">$(DefineConstants);TRACE;DEBUG;NETFX_CORE</DefineConstants>
         <DefineConstants Condition="'$(Configuration)' != 'Debug'">$(DefineConstants);TRACE;RELEASE;NETFX_CORE</DefineConstants>
         <Optimize Condition="'$(Configuration)' != 'Debug'">true</Optimize>
+
+        <!-- Framework versions -->
+        <FrameworkVersion>net8.0</FrameworkVersion>
+        <PlatformWinVersion>10.0.22621.0</PlatformWinVersion>
+        <PlatformWinMinVersion>10.0.19041.0</PlatformWinMinVersion>
+        <TargetFramework>$(FrameworkVersion)-windows$(PlatformWinVersion)</TargetFramework>
+        <TargetPlatformMinVersion>$(PlatformWinMinVersion)</TargetPlatformMinVersion>
     </PropertyGroup>
 
 </Project>
