--- a/src/Files.App.Storage/Files.App.Storage.csproj
+++ b/src/Files.App.Storage/Files.App.Storage.csproj
@@ -1,19 +1,15 @@
 ﻿<!--  Copyright (c) 2024 Files Community. Licensed under the MIT License. See the LICENSE.  -->
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
-        <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
-        <IsTrimmable>true</IsTrimmable>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="FluentFTP" Version="43.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Files.Core.Storage\Files.Core.Storage.csproj" />
-        <ProjectReference Include="..\Files.Shared\Files.Shared.csproj" />
-    </ItemGroup>
-
+  <PropertyGroup>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+    <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
+    <IsTrimmable>true</IsTrimmable>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentFTP" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Files.Core.Storage\Files.Core.Storage.csproj" />
+    <ProjectReference Include="..\Files.Shared\Files.Shared.csproj" />
+  </ItemGroup>
 </Project>
